# serviceffmpeg

./: Makefile.am  README.md  autogen.sh  configure.ac  enigma2-plugin-systemplugins-serviceexteplayer3.bb  enigma2-plugin-systemplugins-serviceffmpeg.bb  serviceffmpeg.bb
m4/: ax_python_devel.m4
mnt/user-data/outputs/serviceffmpeg/: Makefile.am
mnt/user-data/outputs/serviceffmpeg/player/: Makefile.am
mnt/user-data/outputs/serviceffmpeg/plugin/: Makefile.am
plugin/: Makefile.am  plugin.py
serviceexteplayer3/: Makefile.am  serviceexteplayer3.cpp  serviceexteplayer3.h
serviceffmpeg/: Makefile.am  main.cpp  pythonmodule.cpp  serviceffmpeg.cpp  serviceffmpeg.h
src/: Makefile.am
src/exteplayer3/: Makefile.am
src/plugin/: plugin.py
src/serviceexteplayer3/: Makefile  Makefile.am  pythonmodule.cpp  serviceexteplayer3.h
src/serviceexteplayer3/container/: buff_ffmpeg.c
